# LMU-DualSense-Rust

./: .gitignore  Cargo.toml  README.md  build.rs  config.example.toml  run_lmu.bat  run_mock.bat
docs/: LMU-DualSense-Adaptive-Trigger-Bridge.md
docs/wiki/: ARCHITECTURE.md  DEVELOPMENT_LOG.md  INDEX.md  QA_GUIDE.md  REFERENCES.md  TROUBLESHOOTING.md
src/: app.rs  config.rs  lib.rs  main.rs
src/effects/: mapper.rs  mod.rs  smoothing.rs  trigger.rs
src/output/: dsx_udp.rs  mod.rs  null_output.rs
src/telemetry/: frame.rs  lmu_layout.rs  lmu_shared_memory_reader.rs  mock_reader.rs  mod.rs  reader.rs  windows_shared_memory.rs
src/util/: mod.rs  rate_limiter.rs
